missing JNIEXPORT / JNICALL at some places in function declarations/implementations

XMLWordPrintable

    • b11
    • x86
    • windows

      At a number of places in the coding , the JNIEXPORT and/or JNICALL modifiers do not match when one compares the declaration and
       implementation of functions.
      While this still works on most platforms, it fails on Windows 32 bit and leads to errors like this one :

      e:/priv/openjdk/repos/jdk/src/java.desktop/share/native/libmlib_image/mlib_ImageConvKernelConvert.c(87) : error C2373: 'j2d_mlib_ImageConvKernelConvert' : redefinition; different type modifiers
              e:\priv\openjdk\repos\jdk\src\java.desktop\share\native\libmlib_image\mlib_image_proto.h(2630) : see declaration of 'j2d_mlib_ImageConvKernelConvert'

      (there are quite a few of these e.g. in mlib / splashscreen etc.)
      The error seems to be related to the mapfile-removal recently done in jdk/jdk .

            Assignee:
            Matthias Baesken
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: