8201226: missing JNIEXPORT / JNICALL at some places in function declarations/implementations

Co-authored-by: Alexey Ivanov <alexey.ivanov@oracle.com>
Reviewed-by: ihse, mdoerr